# EDUCATIONAL-PROJECT

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py
brain_games/gamelogick/: fifthgame.py  firstgame.py  fourthgame.py  secondgame.py  thirdgame.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
